--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -178,12 +178,6 @@ body {
   }
 }
 
-@media screen and (min-width: 1024px) {
-  .play_btn {
-    --desktop-offset: 25px;
-  }
-}
-
 @keyframes play_button_settle {
   0% {
     left: var(--final-x);
@@ -191,7 +185,7 @@ body {
   }
   100% {
     left: 50%;
-    top: calc(50% + 100px + var(--desktop-offset, 0));
+    top: var(--settle-y);
   }
 }
 
